[package]
name = "rust-csv-128"
version = "0.1.0"
authors = ["ian-hamlin <ian@ihamlin.co.uk>"]
edition = "2018"

[dependencies]
#csv = "1.0"
csv = { git = "https://github.com/ian-hamlin/rust-csv", rev = "9ef099dcd48e454613cd30e0ea8db514905cba92" }
serde = "1.0"
serde_derive = "1.0"

# [patch.crates-io]
# csv = { path = "/Volumes/NiftyDrive/GitHub/downstream-work/rust-csv" }